# proteus-sf

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json
backend/: README.md  main.py  prompt.txt  pyproject.toml
backend/tests/: test_graph_rag.py
backend/utils/: agent.py  ai.py  companion.py  config.py  db.py  extension_validator.py  graph_rag.py  memory.py  prompts.py  tools.py
proteus-extension/: README.md  manifest.config.ts  package-lock.json  package.json  vite.config.ts
proteus-extension/src/: background.ts
proteus-extension/src/components/: HelloWorld.tsx
proteus-extension/src/content/: highlighter.ts  main.tsx
proteus-extension/src/content/views/: App.css
proteus-extension/src/popup/: App.css  App.tsx
proteus-extension/src/shared/: messages.ts
proteus-extension/src/sidepanel/: App.css  App.tsx  index.css
