[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.7",
    "langchain>=1.2.10",
    "langchain-core>=1.2.12",
    "langchain-nvidia-ai-endpoints>=1.0.4",
    "langchain-openai>=1.1.9",
    "langsmith>=0.7.3",
    "networkx>=3.4",
    "numpy>=2.0",
    "openai>=2.20.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "websockets>=15.0",
]
